--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,7 @@
 
         <activity android:name=".MainActivity"></activity>
         <activity android:name=".Profile"></activity>
+        <activity android:name=".EditProfile"></activity>
         <activity android:name=".AddImageActivity"></activity>
 
         <meta-data android:name="com.facebook.sdk.ApplicationId"
